--- a/style.css
+++ b/style.css
@@ -60,19 +60,31 @@ p {
     body {
         margin-top: 20%;
     }
+
+    #cball {
+        max-width: 70%;
+    }
 }
 @media only screen and (min-width: 480px) and (max-width: 768px) {
     body {
         margin-top: 12%;
+    }
+
+    #cball {
+        max-width: 50%;
     }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     body {
         margin-top: 7%;
     }
+
+    #cball {
+        max-width: 40%;
+    }
 }
 
 @keyframes glow {
     from {opacity: 0.8;}
-    to {opacity: 1;}
+    to {opacity: 0.95;}
 }
