--- a/style.css
+++ b/style.css
@@ -57,17 +57,17 @@ p {
 }
 
 @media only screen and (max-width: 480px) {
-    body {
-        margin-top: 20%;
+    input {
+        width: 78%;
     }
-
+    
     #cball {
         max-width: 70%;
     }
 }
 @media only screen and (min-width: 480px) and (max-width: 768px) {
     body {
-        margin-top: 12%;
+        margin-top: 5%;
     }
 
     #cball {
@@ -76,7 +76,7 @@ p {
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     body {
-        margin-top: 7%;
+        margin-top: 2%;
     }
 
     #cball {
