--- a/style.css
+++ b/style.css
@@ -61,33 +61,31 @@ p {
         width: 78%;
         margin: 2%;
     }
-
     br {
         display: none;
     }
-    
     p {
         font-size: 1rem;
+        z-index: 1;
+        position: absolute;
     }
-
     #cball {
         max-width: 70%;
     }
-}
-@media only screen and (min-width: 480px) and (max-width: 768px) {
-    body {
-        margin-top: 5%;
+    div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+}
 
+@media only screen and (min-width: 480px) and (max-width: 768px) {
     #cball {
         max-width: 50%;
     }
 }
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-    body {
-        margin-top: 2%;
-    }
 
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
     #cball {
         max-width: 40%;
     }
